--- a/css/detail.css
+++ b/css/detail.css
@@ -382,46 +382,35 @@ body div#nav-wrapper form#nav-search input {
 
 /*    Layout 
     --------------------------------------------------*/
-main > article > header {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem;
+main > article {
   background-color: rgba(0, 0, 0, 0.05);
+  margin: 1rem;
+  padding: 1rem;
 }
 
 main > article > header h1 {
-  width: 100%;
   margin-bottom: 0rem;
+  margin: 0rem;
+  padding: 1rem;
 }
 
-main > article > article {
-  padding: 1rem 0;
-  background-color: rgba(0, 0, 0, 0.05);
-  margin: 1rem;
-}
-
-main > article > article h2 {
-  padding: 0 1rem;
-  margin: 0;
-  line-height: 1.2;
-}
-
-main > article > article p.info {
+main > article > header p.info {
   font-size: 1rem;
   padding: 0rem 1rem;
   margin-bottom: 0rem;
 }
 
-main > article > article p.info span.name, main > article > article p.info time {
+main > article > header p.info span.name, main > article > header p.info time {
   font-weight: bolder;
 }
 
-main > article > article p.content {
-  margin-bottom: 0rem;
-  font-size: 1.5rem;
-  line-height: 1.2;
+main > article > p:nth-of-type(1) {
+  margin-top: 1rem;
+}
+
+main > article p {
+  padding: 0 1rem;
+  font-size: 1.1rem;
 }
 
 aside figure img {
@@ -474,16 +463,6 @@ aside section#aside-info ul {
 
 /*    layout 700 
     --------------------------------------------------*/
-@media (min-width: 43.75em) {
-  main > article > header {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: center;
-    min-height: 10vh;
-  }
-}
-
 /*    typography 700 
     --------------------------------------------------*/
 @media (min-width: 56.25em) {
@@ -498,7 +477,6 @@ aside section#aside-info ul {
   .content-container main {
     flex: auto;
     margin-right: 1rem;
-    margin: 1rem;
   }
   .content-container main > article {
     flex: auto;
